@@ -486,5 +486,6 @@ Change list for PernMangband
 
 20/12/2001 (Jir)
 - '/dis' can destroy items with pseudo-id tags ({good} or below).
-- 2 more traps(Voluminous cuisine/Unmagic).
+- 3 more traps(Voluminous cuisine/Unmagic/Vermin).
 - small bugfix on msg of set_biofeedback.
+- Bugfix on Morgoth summoning.
